--- a/package.json
+++ b/package.json
@@ -7,19 +7,14 @@
   "description": "unibest - 最好的 uniapp 开发模板",
   "generate-time": "用户创建项目时生成",
   "author": {
-    "name": "feige996",
+    "name": "shufei",
     "zhName": "",
-    "email": "1020103647@qq.com",
-    "github": "https://github.com/feige996",
-    "gitee": "https://gitee.com/feige996"
+    "email": "1017981699@qq.com",
+    "github": "https://github.com/shufei021/unibest-wotui-ts"
   },
   "license": "MIT",
-  "homepage": "https://unibest.tech",
-  "repository": "https://github.com/feige996/unibest",
-  "bugs": {
-    "url": "https://github.com/feige996/unibest/issues",
-    "url-old": "https://github.com/codercup/unibest/issues"
-  },
+  "homepage": "https://github.com/shufei021/unibest-wotui-ts",
+  "repository": "https://github.com/shufei021/unibest-wotui-ts",
   "engines": {
     "node": ">=22",
     "pnpm": ">=9 <=10.12"
